--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ header {
 /*============ABOUT CSS==========*/
 
 
-/*============OUT PRODUCTS CSS==========*/
+/*============OUR PROJECTS CSS==========*/
 
 .ourproduct-section {
     background: url(../images/projects-bg.png) no-repeat;
@@ -381,20 +381,22 @@ header {
 }
 
 .get-item p {
-    padding-right: 8rem;
+    padding-right: 2rem;
     font-size: 1.1rem;
-    margin: 0px;
+    margin: 2px;
     line-height: 1.6;
+    align-items: center;
+    justify-content: center;
 }
 
 .get-item ul li {
     font-size: 1.3rem;
-    margin: 0.8rem 0px;
+    margin: 0.66rem 0px;
 }
 
-/*============OUT PRODUCTS CSS==========*/
+/*============OUR PROJECTS CSS==========*/
 
-/*============INTRODUCING  CSS==========*/
+/*============INTRODUCTION  CSS==========*/
 
 .introducing-section {
     padding: 6rem 0px;
@@ -442,7 +444,7 @@ header {
     border-radius: 9px;
 }
 
-/*=========== INTRODUCING-CSS ==========*/
+/*=========== INTRODUCTION-CSS ==========*/
 
 /*=========== GET-SECTION-CSS ==========*/
 .getsection {
@@ -451,6 +453,7 @@ header {
     background-size: 14%;
     background-position: left bottom;
     background-attachment: fixed;
+    justify-content: center;
 }
 
 /*=========== GET-SECTION-CSS ==========*/
